[gd_scene load_steps=17 format=3 uid="uid://bgr4nq5o17pmh"]

[ext_resource type="Script" path="res://scenes/objects/player.gd" id="1_5wbp8"]
[ext_resource type="Texture2D" uid="uid://dkj2ltlmyqlii" path="res://art/player/hand_closed.png" id="2_4wubt"]
[ext_resource type="Texture2D" uid="uid://cmpjj5lo2116y" path="res://art/player/hand_open.png" id="3_nc5kx"]
[ext_resource type="Texture2D" uid="uid://c4ik7civndvb6" path="res://art/player/player_head.png" id="4_8lqlt"]
[ext_resource type="Texture2D" uid="uid://1palh4ajmj3" path="res://art/player/player_legs.png" id="5_g830a"]
[ext_resource type="AudioStream" uid="uid://bnb36mqraxmkg" path="res://audio/pickup_object.wav" id="6_dmfrs"]
[ext_resource type="AudioStream" uid="uid://drvdd0g5lu211" path="res://audio/box_drop_better.wav" id="7_jdbta"]
[ext_resource type="AudioStream" uid="uid://bkyjrghnif8y8" path="res://audio/jump3.wav" id="8_3mkwv"]
[ext_resource type="AudioStream" uid="uid://c6i1ybp18w08x" path="res://audio/footsteps_0.wav" id="9_7tj8n"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2c1hu"]
friction = 0.0

[sub_resource type="Curve" id="Curve_fcyqv"]
min_value = -2.0
max_value = 2.0
_data = [Vector2(0, 2.13163e-14), 0.0, 13.0693, 0, 0, Vector2(0.250746, 2), 0.0, 0.0, 0, 0, Vector2(0.755224, -2), 0.0, 0.0, 0, 0, Vector2(1, 2.13163e-14), 12.2595, 0.0, 0, 0]
point_count = 4

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4rmwu"]
radius = 29.14
height = 86.99

[sub_resource type="CircleShape2D" id="CircleShape2D_wh5jr"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4eusl"]

[sub_resource type="Gradient" id="Gradient_vu1d4"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xvbfj"]
gradient = SubResource("Gradient_vu1d4")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.901376, 0.192661)

[node name="Player" type="RigidBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 2049
physics_material_override = SubResource("PhysicsMaterial_2c1hu")
lock_rotation = true
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_5wbp8")
wiggle_curve = SubResource("Curve_fcyqv")
holding_hand = ExtResource("2_4wubt")
empty_hand = ExtResource("3_nc5kx")
player_colors = Array[Color]([Color(0, 0.709804, 0.835294, 1), Color(1, 0.435294, 0.294118, 1), Color(0.321569, 0.74902, 0, 1), Color(0.670588, 0.537255, 1, 1), Color(1, 0.890196, 0.427451, 1), Color(0.364706, 0.364706, 0.364706, 1)])
metadata/grabbable = true
metadata/grabbed = false

[node name="Head" type="Sprite2D" parent="."]
z_index = 4
scale = Vector2(0.048, 0.048)
texture = ExtResource("4_8lqlt")

[node name="Legs" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(0, 36)
scale = Vector2(0.04, 0.04)
texture = ExtResource("5_g830a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("CapsuleShape2D_4rmwu")

[node name="Arm" type="Line2D" parent="."]
z_index = 2
points = PackedVector2Array(0, 0, 0, 0)
default_color = Color(0.662745, 0.662745, 0.662745, 1)

[node name="HandMeta" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandMeta"]
shape = SubResource("CircleShape2D_wh5jr")
disabled = true

[node name="Hand" type="Sprite2D" parent="HandMeta"]
modulate = Color(0.701961, 0.701961, 0.701961, 1)
z_index = 3
texture_filter = 1
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_nc5kx")

[node name="GrabArea" type="Area2D" parent="HandMeta"]
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="HandMeta/GrabArea"]
shape = SubResource("CircleShape2D_4eusl")

[node name="BoxPickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_dmfrs")
volume_db = -15.0

[node name="BoxDrop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_jdbta")
volume_db = -15.0

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3mkwv")
volume_db = -15.0

[node name="Footstep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_7tj8n")
volume_db = -15.0

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(5, 5)
energy = 0.3
range_layer_min = -3
shadow_filter = 1
shadow_filter_smooth = 1.3
texture = SubResource("GradientTexture2D_xvbfj")
texture_scale = 1.97

[node name="PointLight2D" type="PointLight2D" parent="PointLight2D"]
energy = 0.63
range_z_min = 1
range_layer_min = -3
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 0.6
texture = SubResource("GradientTexture2D_xvbfj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="body_entered" from="HandMeta/GrabArea" to="." method="_on_grab_area_body_entered"]
[connection signal="body_exited" from="HandMeta/GrabArea" to="." method="_on_grab_area_body_exited"]
